[metadata]
name = zn_operation_table
version = 1.1.3
author = Juan Pablo Castiglione
author_email = juanpablocastiglione01@gmail.com
description = Simple package to obtain Zn's equivalence classes sum or product operation tables.
long_description = file: README.md
long_description_content_type = text/markdown
https://github.com/JuanpiCasti/zn_operation_table_generator
project_urls =
    Bug Tracker = https://github.com/JuanpiCasti/zn_operation_table_generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
